Add more tests add maven wrapper fix pom.xml